--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "ItsJustMeChris",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "fastify": "^2.11.0",
-    "fastify-cors": "^3.0.0",
-    "fastify-sequelize": "^1.0.4",
-    "pg": "^7.17.0",
-    "sequelize": "^5.21.3"
+    "fastify-cors": "^3.0.1",
+    "pg": "^7.17.1",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1"
   }
 }
